# fast-todo

./: .env.example  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
api/: README.md  alembic.ini  main.py
api/cruds/: done.py  task.py
api/migration/: env.py
api/migration/versions/: 2025_01_31_1042-89da12e3bc26_create_tasks_table.py  2025_01_31_1043-f6b73e46a8e2_create_done_table.py  2025_01_31_1256-0b51425ed70d_add_columns.py  2025_01_31_2147-c7af944de603_add_columns.py  2025_01_31_2154-7df38bca8d1c_add_columns.py  2025_02_06_0207-110e4aed94ff_add_columns.py  2025_02_06_1503-4f4e0d49ad4c_add_columns.py  2025_02_06_1833-7852e334bfb9_add_columns.py  2025_02_06_1841-25bd28fdfc67_add_columns.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
api/settings/: config.py
tests/: test_main.py
