[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["yu ogawa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.7"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
psycopg = {extras = ["binary"], version = "^3.2.4"}
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
