[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["yu ogawa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.7"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
psycopg = {extras = ["binary"], version = "^3.2.4"}
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"



[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"
aiosqlite = "^0.20.0"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"


[pytest]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
